// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldErrorList should render and errors should be there 1`] = `
"<Component title=\\"There was an error. Please update the following:\\" errors={{...}} labels={{...}}>
  <Component className={[undefined]} title=\\"There was an error. Please update the following:\\" errors={{...}}>
    <ErrorBanner className={[undefined]} message=\\"There was an error. Please update the following:\\">
      <div className={{...}}>
        <WithStyles(ForwardRef(Typography)) className={{...}}>
          <ForwardRef(Typography) classes={{...}} className={{...}}>
            <p className=\\"MuiTypography-root color marginBottom MuiTypography-body1\\">
              <i className=\\"fa fa-exclamation-circle\\" />
               
              There was an error. Please update the following:
            </p>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
        <ul>
          <li>
            <WithStyles(ForwardRef(Typography))>
              <ForwardRef(Typography) classes={{...}}>
                <p className=\\"MuiTypography-root MuiTypography-body1\\">
                  Name &gt; Name is too short
                </p>
              </ForwardRef(Typography)>
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))>
              <ForwardRef(Typography) classes={{...}}>
                <p className=\\"MuiTypography-root MuiTypography-body1\\">
                  Promo Code Field Name &gt; Code is expired
                </p>
              </ForwardRef(Typography)>
            </WithStyles(ForwardRef(Typography))>
          </li>
        </ul>
      </div>
    </ErrorBanner>
  </Component>
</Component>"
`;

exports[`FieldErrorList should render with different errors 1`] = `
"<Component title=\\"There was an error. Please update the following:\\" errors={{...}} labels={{...}}>
  <Component className={[undefined]} title=\\"There was an error. Please update the following:\\" errors={{...}}>
    <ErrorBanner className={[undefined]} message=\\"There was an error. Please update the following:\\">
      <div className={{...}}>
        <WithStyles(ForwardRef(Typography)) className={{...}}>
          <ForwardRef(Typography) classes={{...}} className={{...}}>
            <p className=\\"MuiTypography-root color marginBottom MuiTypography-body1\\">
              <i className=\\"fa fa-exclamation-circle\\" />
               
              There was an error. Please update the following:
            </p>
          </ForwardRef(Typography)>
        </WithStyles(ForwardRef(Typography))>
        <ul>
          <li>
            <WithStyles(ForwardRef(Typography))>
              <ForwardRef(Typography) classes={{...}}>
                <p className=\\"MuiTypography-root MuiTypography-body1\\">
                  Name &gt; Name is too short
                </p>
              </ForwardRef(Typography)>
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))>
              <ForwardRef(Typography) classes={{...}}>
                <p className=\\"MuiTypography-root MuiTypography-body1\\">
                  Name &gt; Name has invalid character
                </p>
              </ForwardRef(Typography)>
            </WithStyles(ForwardRef(Typography))>
          </li>
          <li>
            <WithStyles(ForwardRef(Typography))>
              <ForwardRef(Typography) classes={{...}}>
                <p className=\\"MuiTypography-root MuiTypography-body1\\">
                  Description Header &gt; Description has invalid character
                </p>
              </ForwardRef(Typography)>
            </WithStyles(ForwardRef(Typography))>
          </li>
        </ul>
      </div>
    </ErrorBanner>
  </Component>
</Component>"
`;

exports[`FieldErrorList should render with minimal props 1`] = `"<Component className={[undefined]} title=\\"There was an error. Please update the following:\\" errors={{...}} />"`;
